--- a/index.html
+++ b/index.html
@@ -36,8 +36,24 @@
             </svg>
           </button>
           <button id="langToggle" class="lang-toggle" title="Change language">
-            <span class="lang-flag" data-lang="fr">🇫🇷</span>
-            <span class="lang-flag hidden" data-lang="en">🇬🇧</span>
+            <span class="lang-flag" data-lang="fr">
+              <!-- French Flag SVG -->
+              <svg width="20" height="14" viewBox="0 0 30 20" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0" y="0" width="10" height="20" fill="#002395"/>
+                <rect x="10" y="0" width="10" height="20" fill="#FFFFFF"/>
+                <rect x="20" y="0" width="10" height="20" fill="#ED2939"/>
+              </svg>
+            </span>
+            <span class="lang-flag hidden" data-lang="en">
+              <!-- UK Flag SVG -->
+              <svg width="20" height="14" viewBox="0 0 60 30" xmlns="http://www.w3.org/2000/svg">
+                <rect width="60" height="30" fill="#012169"/>
+                <path d="M0,0 L60,30 M60,0 L0,30" stroke="#FFF" stroke-width="6"/>
+                <path d="M0,0 L60,30 M60,0 L0,30" stroke="#C8102E" stroke-width="4" stroke-dasharray="0,6,54,6"/>
+                <path d="M30,0 v30 M0,15 h60" stroke="#FFF" stroke-width="10"/>
+                <path d="M30,0 v30 M0,15 h60" stroke="#C8102E" stroke-width="6"/>
+              </svg>
+            </span>
           </button>
           <a href="history.html" class="history-toggle" title="Historique" data-i18n-title="history">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
